add 3D transpose check

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:32069dc86a4532953646366b34432afdf34b304508affb230c5d72426b5e1ae4"
+  "signature": "sha256:6b33f3be6efbfc80ed54eba7b87486d27859168e58fd1db5178b0b63e83e135d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,7 +43,7 @@
       "kbla = generate_data(n0, n1, p = 1.25)\n",
       "bla = np.fft.irfft2(kbla).astype(np.float32)\n",
       "print (bla.shape, bla.dtype)\n",
-      "#bla.tofile(\"data0\")"
+      "bla.tofile(\"data0\")"
      ],
      "language": "python",
      "metadata": {},
@@ -56,7 +56,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -77,7 +77,49 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "bla = np.random.randn(32, 24, 48).astype(np.float32)\n",
+      "bla.tofile(\"data0\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "bla0 = np.fromfile(\"data0\", dtype = np.float32).reshape(32, 24, 48)\n",
+      "bla1 = np.fromfile(\"data1\", dtype = np.float32).reshape(48, 24, 32)\n",
+      "print (np.average(np.abs(bla0.T - bla1)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
