zindex consistency check
it fails...

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f14270108d9e01db08c71ad3925da02f4b63fd26837563b62e6d9871e4b07bd6"
+  "signature": "sha256:83932d5630af53079b3b67484d6af589d14e28964a86f56d149bc5b638d610c6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -123,17 +123,15 @@
       "           (a.shape[2] % 8 == 0))\n",
       "    if type(odtype) == type(None):\n",
       "        odtype = a.dtype\n",
-      "    b = a.reshape(\n",
-      "        *((a.shape[0] // 8, a.shape[1] // 8, a.shape[2] // 8) +\n",
-      "          (8, 8, 8) +\n",
-      "          a.shape[3:]))\n",
       "    c = np.zeros(\n",
       "        ((((a.shape[0] // 8)*(a.shape[1] // 8)*(a.shape[2] // 8)),) +\n",
       "         (8, 8, 8) +\n",
       "         a.shape[3:]),\n",
       "        dtype = odtype)\n",
-      "    bk, bj, bi = np.mgrid[0:b.shape[0], 0:b.shape[1], 0:b.shape[2]]\n",
-      "    bindices = np.array([bk, bj, bi])\n",
+      "    bk, bj, bi = np.mgrid[0:a.shape[0]//8,\n",
+      "                          0:a.shape[1]//8,\n",
+      "                          0:a.shape[2]//8]\n",
+      "    bindices = np.array([bi, bj, bk])\n",
       "    cindices = cm.grid3D_to_zindex(bindices)\n",
       "    for tk in range(8):\n",
       "        for tj in range(8):\n",
@@ -149,16 +147,18 @@
       "\n",
       "Rdata_py = array_to_8cubes(Rdata_py_tmp).copy()\n",
       "\n",
-      "z = np.random.randint(Rdata_py.shape[0])\n",
-      "mlab.contour3d(Rdata_py[z, :, :, :, 0])\n",
-      "#mlab.contour3d(Rdata_py_tmp[:8, :8, :8, 0],\n",
-      "#               contours = [0])\n",
+      "i0 = np.random.randint(16)\n",
+      "i1 = np.random.randint(16)\n",
+      "i2 = np.random.randint(16)\n",
+      "z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
+      "mlab.contour3d(Rdata_py[z, :, :, :, 0], color = (1, 0, 0))\n",
+      "mlab.contour3d(Rdata_py_tmp[i0:i0 + 8, i1:i1+8, i2:i2+8, 0], color = (0, 0, 1))\n",
       "mlab.show()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 69
     },
     {
      "cell_type": "code",
@@ -168,7 +168,7 @@
       "if subprocess.call(['make', 'full']) == 0:\n",
       "    subprocess.call(['mpirun.mpich',\n",
       "                     '-np',\n",
-      "                     '8',\n",
+      "                     '1',\n",
       "                     './full',\n",
       "                     '{0}'.format(n/2+1),\n",
       "                     '{0}'.format(n),\n",
@@ -185,7 +185,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -200,20 +200,30 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "20.7425\n"
+        "19.9579\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 60
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\n",
+      "i0 = np.random.randint(16)\n",
+      "i1 = np.random.randint(16)\n",
+      "i2 = np.random.randint(16)\n",
+      "z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
+      "mlab.contour3d(Rdata_py[z, :, :, :, 0], color = (1, 0, 0))\n",
+      "mlab.contour3d(Rdata[z, :, :, :, 0], color = (0, 1, 0))\n",
+      "mlab.contour3d(Rdata_py_tmp[i0:i0 + 8, i1:i1+8, i2:i2+8, 0], color = (0, 0, 1))\n",
+      "mlab.show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
