python z-curve shuffle seems correct

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:83932d5630af53079b3b67484d6af589d14e28964a86f56d149bc5b638d610c6"
+  "signature": "sha256:3d96380c7414aba686e8d20337a6291cd57e6328420a48384f43f4bbdc8b87f1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -133,37 +133,52 @@
       "                          0:a.shape[2]//8]\n",
       "    bindices = np.array([bi, bj, bk])\n",
       "    cindices = cm.grid3D_to_zindex(bindices)\n",
-      "    for tk in range(8):\n",
-      "        for tj in range(8):\n",
-      "            for ti in range(8):\n",
-      "                c[cindices, tk, tj, ti] = \\\n",
-      "                    a[8*bk + tk, 8*bj + tj, 8*bi + ti]\n",
-      "    return c\n",
+      "    plist = []\n",
+      "    zlist = []\n",
+      "    for k in range(a.shape[0]//8):\n",
+      "        for j in range(a.shape[1]//8):\n",
+      "            for i in range(a.shape[2]//8):\n",
+      "                z = cm.grid3D_to_zindex(np.array([k, j, i]))\n",
+      "                c[z] = a[8*k:8*(k+1), 8*j:8*(j+1), 8*i:8*(i+1)]\n",
+      "                plist.append([i, j, k])\n",
+      "                zlist.append(z)\n",
+      "    plist = np.array(plist)\n",
+      "    zlist = np.array(zlist)\n",
+      "    i = np.argsort(zlist)\n",
+      "#     for tk in range(8):\n",
+      "#         for tj in range(8):\n",
+      "#             for ti in range(8):\n",
+      "#                 c[cindices, tk, tj, ti] = \\\n",
+      "#                     a[8*bk + tk, 8*bj + tj, 8*bi + ti]\n",
+      "    return c, zlist[i], plist[i]\n",
       "\n",
       "d0 = transform_py(Kdata0)\n",
       "d1 = transform_py(Kdata1)\n",
       "\n",
       "Rdata_py_tmp = np.array([d0, d1]).transpose((1, 2, 3, 0))\n",
       "\n",
-      "Rdata_py = array_to_8cubes(Rdata_py_tmp).copy()\n",
+      "Rdata_py, zlist, plist = array_to_8cubes(Rdata_py_tmp)\n",
       "\n",
+      "#mlab.plot3d(plist[:512, 0], plist[:512, 1], plist[:512, 2], zlist[:512])\n",
       "i0 = np.random.randint(16)\n",
       "i1 = np.random.randint(16)\n",
       "i2 = np.random.randint(16)\n",
       "z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
       "mlab.contour3d(Rdata_py[z, :, :, :, 0], color = (1, 0, 0))\n",
-      "mlab.contour3d(Rdata_py_tmp[i0:i0 + 8, i1:i1+8, i2:i2+8, 0], color = (0, 0, 1))\n",
+      "mlab.contour3d(Rdata_py_tmp[i0*8:i0*8 + 8, i1*8:i1*8+8, i2*8:i2*8+8, 0],\n",
+      "               color = (0, 0, 1))\n",
       "mlab.show()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 69
+     "prompt_number": 87
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
       "subprocess.call(['rm', 'Rdata'])\n",
       "if subprocess.call(['make', 'full']) == 0:\n",
       "    subprocess.call(['mpirun.mpich',\n",
@@ -181,11 +196,7 @@
       "        dtype = np.float32).reshape(-1, 8, 8, 8, 2)\n",
       "else:\n",
       "    print ('compilation error')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 47
+     ]
     },
     {
      "cell_type": "code",
@@ -210,20 +221,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "\n",
       "i0 = np.random.randint(16)\n",
       "i1 = np.random.randint(16)\n",
       "i2 = np.random.randint(16)\n",
       "z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
       "mlab.contour3d(Rdata_py[z, :, :, :, 0], color = (1, 0, 0))\n",
+      "mlab.contour3d(Rdata_py_tmp[i0*8:i0*8 + 8, i1*8:i1*8+8, i2*8:i2*8+8, 0],\n",
+      "               color = (0, 0, 1))\n",
       "mlab.contour3d(Rdata[z, :, :, :, 0], color = (0, 1, 0))\n",
-      "mlab.contour3d(Rdata_py_tmp[i0:i0 + 8, i1:i1+8, i2:i2+8, 0], color = (0, 0, 1))\n",
       "mlab.show()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 65
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
