--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3d96380c7414aba686e8d20337a6291cd57e6328420a48384f43f4bbdc8b87f1"
+  "signature": "sha256:86099133bb53632eb7d92da8b33ad8e3155e69827f9f47638a9e97275039d8a8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -145,6 +145,8 @@
       "    plist = np.array(plist)\n",
       "    zlist = np.array(zlist)\n",
       "    i = np.argsort(zlist)\n",
+      "    #for p in range(plist.shape[0]):\n",
+      "    #    print zlist[p], plist[p]\n",
       "#     for tk in range(8):\n",
       "#         for tj in range(8):\n",
       "#             for ti in range(8):\n",
@@ -172,13 +174,12 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 87
+     "prompt_number": 94
     },
     {
-     "cell_type": "heading",
-     "level": 3,
-     "metadata": {},
-     "source": [
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "subprocess.call(['rm', 'Rdata'])\n",
       "if subprocess.call(['make', 'full']) == 0:\n",
       "    subprocess.call(['mpirun.mpich',\n",
@@ -196,13 +197,27 @@
       "        dtype = np.float32).reshape(-1, 8, 8, 8, 2)\n",
       "else:\n",
       "    print ('compilation error')"
-     ]
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 91
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(np.max(np.abs(Rdata_py - Rdata)))"
+      "print(np.max(np.abs(Rdata_py - Rdata)))\n",
+      "i0 = np.random.randint(16)\n",
+      "i1 = np.random.randint(16)\n",
+      "i2 = 0 #np.random.randint(16)\n",
+      "z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
+      "#z = 203\n",
+      "print cm.zindex_to_grid3D(z)\n",
+      "s = np.sum(np.abs(Rdata_py[None, z, :, :, :, 0] - Rdata[..., 0]),\n",
+      "           axis = (1, 2, 3))\n",
+      "z1 = np.argmin(s)\n",
+      "print z, z1, s[z1]"
      ],
      "language": "python",
      "metadata": {},
@@ -211,11 +226,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "19.9579\n"
+        "19.9579\n",
+        "[9 6 0]\n",
+        "657 657 0.0\n"
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 109
     },
     {
      "cell_type": "code",
@@ -225,16 +242,19 @@
       "i1 = np.random.randint(16)\n",
       "i2 = np.random.randint(16)\n",
       "z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
-      "mlab.contour3d(Rdata_py[z, :, :, :, 0], color = (1, 0, 0))\n",
-      "mlab.contour3d(Rdata_py_tmp[i0*8:i0*8 + 8, i1*8:i1*8+8, i2*8:i2*8+8, 0],\n",
+      "mlab.contour3d(Rdata_py[z, :, :, :, 0],\n",
+      "               color = (0, 1, 0))\n",
+      "mlab.contour3d(Rdata_py_tmp[i0*8:i0*8 + 8,\n",
+      "                            i1*8:i1*8 + 8,\n",
+      "                            i2*8:i2*8 + 8, 0],\n",
       "               color = (0, 0, 1))\n",
-      "mlab.contour3d(Rdata[z, :, :, :, 0], color = (0, 1, 0))\n",
+      "mlab.contour3d(Rdata[z, :, :, :, 0], color = (1, 0, 0))\n",
       "mlab.show()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 88
+     "prompt_number": 96
     },
     {
      "cell_type": "code",
