--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:86099133bb53632eb7d92da8b33ad8e3155e69827f9f47638a9e97275039d8a8"
+  "signature": "sha256:81d6e5b84639491eb537b89cba2864168127d437faeb5298d4c8e2dc26ef2d12"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -201,7 +201,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 91
+     "prompt_number": 110
     },
     {
      "cell_type": "code",
@@ -210,7 +210,7 @@
       "print(np.max(np.abs(Rdata_py - Rdata)))\n",
       "i0 = np.random.randint(16)\n",
       "i1 = np.random.randint(16)\n",
-      "i2 = 0 #np.random.randint(16)\n",
+      "i2 = np.random.randint(16)\n",
       "z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
       "#z = 203\n",
       "print cm.zindex_to_grid3D(z)\n",
@@ -226,13 +226,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "19.9579\n",
-        "[9 6 0]\n",
-        "657 657 0.0\n"
+        "2.86102e-06\n",
+        "[4 0 1]\n",
+        "68 68 0.0\n"
        ]
       }
      ],
-     "prompt_number": 109
+     "prompt_number": 111
     },
     {
      "cell_type": "code",
@@ -254,7 +254,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 96
+     "prompt_number": 112
     },
     {
      "cell_type": "code",
