finalize split file output functionality

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ae900b72d559af23210256bab2cd50894706b98d9b53b4846df0f6db9ae56322"
+  "signature": "sha256:89382dc0480b222aff0422843abff870b50845f17d2bc41415431ef40ac300ba"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -176,7 +176,7 @@
       "if subprocess.call(['make', 'full']) == 0:\n",
       "    subprocess.call(['mpirun.mpich',\n",
       "                     '-np',\n",
-      "                     '1',\n",
+      "                     '8',\n",
       "                     './full',\n",
       "                     '{0}'.format(n/2+1),\n",
       "                     '{0}'.format(n),\n",
@@ -184,16 +184,20 @@
       "                     '{0}'.format(N),\n",
       "                     '{0}'.format(N),\n",
       "                     '{0}'.format(N)])\n",
-      "    Rdata = np.fromfile(\n",
-      "        \"Rdata\",\n",
+      "    Rdata0 = np.fromfile(\n",
+      "        \"Rdata_Z0000000\",\n",
       "        dtype = np.float32).reshape(-1, 8, 8, 8, 2)\n",
+      "    Rdata1 = np.fromfile(\n",
+      "        \"Rdata_Z0000800\",\n",
+      "        dtype = np.float32).reshape(-1, 8, 8, 8, 2)\n",
+      "    Rdata = np.concatenate([Rdata0, Rdata1])\n",
       "else:\n",
       "    print ('compilation error')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -218,13 +222,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "2.86102e-06\n",
-        "[12  9  2]\n",
-        "1634 1634 0.0\n"
+        "13.4568\n",
+        "[ 7 13  7]\n",
+        "1519 1519 0.0\n"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -246,7 +250,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
