--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:89382dc0480b222aff0422843abff870b50845f17d2bc41415431ef40ac300ba"
+  "signature": "sha256:3b96d29d5626143e435e394e091fcbc044aabf29bd5ae5a4573f567e66555034"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -57,21 +57,14 @@
       "\n",
       "Kdata0 = generate_data_3D(n, p = 2).astype(np.complex64)\n",
       "Kdata1 = generate_data_3D(n, p = 2).astype(np.complex64)\n",
+      "Kdata1 = Kdata0.copy()\n",
       "Kdata0.T.copy().tofile(\"Kdata0\")\n",
       "Kdata1.T.copy().tofile(\"Kdata1\")"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "-c:15: RuntimeWarning: divide by zero encountered in divide\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": [],
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -166,7 +159,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -197,7 +190,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -208,9 +201,9 @@
       "i1 = np.random.randint(16)\n",
       "i2 = np.random.randint(16)\n",
       "z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
-      "#z = 203\n",
+      "z = 0\n",
       "print cm.zindex_to_grid3D(z)\n",
-      "s = np.sum(np.abs(Rdata_py[None, z, :, :, :, 0] - Rdata[..., 0]),\n",
+      "s = np.max(np.abs(Rdata_py[None, z, :, :, :, 0] - Rdata[..., 0]),\n",
       "           axis = (1, 2, 3))\n",
       "z1 = np.argmin(s)\n",
       "print z, z1, s[z1]"
@@ -222,13 +215,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "13.4568\n",
-        "[ 7 13  7]\n",
-        "1519 1519 0.0\n"
+        "16.7877\n",
+        "[0 0 0]\n",
+        "0 670 1.5112\n"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
@@ -250,7 +243,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
