--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3b96d29d5626143e435e394e091fcbc044aabf29bd5ae5a4573f567e66555034"
+  "signature": "sha256:4f131f58dbd99f07ad3b4455389eb9c9ecdd1dbe5f02a23a1d4cca6881bb9047"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -64,7 +64,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -130,13 +130,6 @@
       "    plist = np.array(plist)\n",
       "    zlist = np.array(zlist)\n",
       "    i = np.argsort(zlist)\n",
-      "    #for p in range(plist.shape[0]):\n",
-      "    #    print zlist[p], plist[p]\n",
-      "#     for tk in range(8):\n",
-      "#         for tj in range(8):\n",
-      "#             for ti in range(8):\n",
-      "#                 c[cindices, tk, tj, ti] = \\\n",
-      "#                     a[8*bk + tk, 8*bj + tj, 8*bi + ti]\n",
       "    return c, zlist[i], plist[i]\n",
       "\n",
       "d0 = transform_py(Kdata0)\n",
@@ -146,7 +139,6 @@
       "\n",
       "Rdata_py, zlist, plist = array_to_8cubes(Rdata_py_tmp)\n",
       "\n",
-      "#mlab.plot3d(plist[:512, 0], plist[:512, 1], plist[:512, 2], zlist[:512])\n",
       "i0 = np.random.randint(16)\n",
       "i1 = np.random.randint(16)\n",
       "i2 = np.random.randint(16)\n",
@@ -159,54 +151,61 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 30
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "subprocess.call(['rm', 'Rdata'])\n",
-      "if subprocess.call(['make', 'full']) == 0:\n",
-      "    subprocess.call(['mpirun.mpich',\n",
-      "                     '-np',\n",
-      "                     '8',\n",
-      "                     './full',\n",
-      "                     '{0}'.format(n/2+1),\n",
-      "                     '{0}'.format(n),\n",
-      "                     '{0}'.format(n),\n",
-      "                     '{0}'.format(N),\n",
-      "                     '{0}'.format(N),\n",
-      "                     '{0}'.format(N)])\n",
-      "    Rdata0 = np.fromfile(\n",
-      "        \"Rdata_Z0000000\",\n",
-      "        dtype = np.float32).reshape(-1, 8, 8, 8, 2)\n",
-      "    Rdata1 = np.fromfile(\n",
-      "        \"Rdata_Z0000800\",\n",
-      "        dtype = np.float32).reshape(-1, 8, 8, 8, 2)\n",
-      "    Rdata = np.concatenate([Rdata0, Rdata1])\n",
-      "else:\n",
-      "    print ('compilation error')"
+      "def get_cpp_data(branch = 'develop'):\n",
+      "    subprocess.call(['git', 'checkout', branch])\n",
+      "    subprocess.call(['rm', 'Rdata_z0000000', 'Rdata_z0000800'])\n",
+      "    if subprocess.call(['make', 'full']) == 0:\n",
+      "        subprocess.call(['mpirun.mpich',\n",
+      "                         '-np',\n",
+      "                         '8',\n",
+      "                         './full',\n",
+      "                         '{0}'.format(n/2+1),\n",
+      "                         '{0}'.format(n),\n",
+      "                         '{0}'.format(n),\n",
+      "                         '{0}'.format(N),\n",
+      "                         '{0}'.format(N),\n",
+      "                         '{0}'.format(N)])\n",
+      "        Rdata0 = np.fromfile(\n",
+      "            \"Rdata_z0000000\",\n",
+      "            dtype = np.float32).reshape(-1, 8, 8, 8, 2)\n",
+      "        Rdata1 = np.fromfile(\n",
+      "            \"Rdata_z0000800\",\n",
+      "            dtype = np.float32).reshape(-1, 8, 8, 8, 2)\n",
+      "        return np.concatenate([Rdata0, Rdata1])\n",
+      "    else:\n",
+      "        print ('compilation error')\n",
+      "        return None\n",
+      "\n",
+      "Rdata = get_cpp_data(branch = 'develop')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 35
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(np.max(np.abs(Rdata_py - Rdata)))\n",
-      "i0 = np.random.randint(16)\n",
-      "i1 = np.random.randint(16)\n",
-      "i2 = np.random.randint(16)\n",
-      "z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
-      "z = 0\n",
-      "print cm.zindex_to_grid3D(z)\n",
-      "s = np.max(np.abs(Rdata_py[None, z, :, :, :, 0] - Rdata[..., 0]),\n",
-      "           axis = (1, 2, 3))\n",
-      "z1 = np.argmin(s)\n",
-      "print z, z1, s[z1]"
+      "distance = np.max(np.abs(Rdata_py - Rdata))\n",
+      "print distance\n",
+      "if distance > 1e-5:\n",
+      "    i0 = np.random.randint(16)\n",
+      "    i1 = np.random.randint(16)\n",
+      "    i2 = np.random.randint(16)\n",
+      "    z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
+      "    #z = 0\n",
+      "    print cm.zindex_to_grid3D(z)\n",
+      "    s = np.max(np.abs(Rdata_py[None, z, :, :, :, 0] - Rdata[..., 0]),\n",
+      "               axis = (1, 2, 3))\n",
+      "    z1 = np.argmin(s)\n",
+      "    print z, z1, s[z1]"
      ],
      "language": "python",
      "metadata": {},
@@ -215,13 +214,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "16.7877\n",
-        "[0 0 0]\n",
-        "0 670 1.5112\n"
+        "2.38419e-06\n"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -243,7 +240,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 37
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
