use new makefile

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4f131f58dbd99f07ad3b4455389eb9c9ecdd1dbe5f02a23a1d4cca6881bb9047"
+  "signature": "sha256:3746adfc6567f394973ab357f8a68759f766ba127e0a9a388298c16ebbafbe4e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -63,8 +63,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 26
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "-c:15: RuntimeWarning: divide by zero encountered in divide\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -151,7 +159,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -160,11 +168,11 @@
       "def get_cpp_data(branch = 'develop'):\n",
       "    subprocess.call(['git', 'checkout', branch])\n",
       "    subprocess.call(['rm', 'Rdata_z0000000', 'Rdata_z0000800'])\n",
-      "    if subprocess.call(['make', 'full']) == 0:\n",
+      "    if subprocess.call(['make', 'full.elf']) == 0:\n",
       "        subprocess.call(['mpirun.mpich',\n",
       "                         '-np',\n",
       "                         '8',\n",
-      "                         './full',\n",
+      "                         './full.elf',\n",
       "                         '{0}'.format(n/2+1),\n",
       "                         '{0}'.format(n),\n",
       "                         '{0}'.format(n),\n",
@@ -187,7 +195,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -214,11 +222,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "2.38419e-06\n"
+        "2.86102e-06\n"
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -240,7 +248,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
