use fftw get size stuff

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b66beda6c64119cb0725443436f940cc3d6a7269d12b4d537c8d44881b89be2c"
+  "signature": "sha256:69740a4c678f49d132215631329a0db6b8e997cbd8727af1a2295fa164ceadc6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -190,12 +190,12 @@
       "        print ('compilation error')\n",
       "        return None\n",
       "\n",
-      "Rdata = get_cpp_data(branch = 'develop')"
+      "Rdata = get_cpp_data(branch = 'feature-arbitrary_dimensions')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -226,7 +226,7 @@
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
