measure execution time

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:55b0c50892fc2c11b65a2cb72ffdcd83db993281b9695e9785bb205e4fe4fa8c"
+  "signature": "sha256:93eaae8c6afd4494839eeb5b1eeedbecfe17ce095d41272f79440b94408d9a5d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -169,7 +169,8 @@
       "    subprocess.call(['git', 'checkout', branch])\n",
       "    subprocess.call(['rm', 'Rdata_z0000000', 'Rdata_z0000800'])\n",
       "    if subprocess.call(['make', 'full.elf']) == 0:\n",
-      "        subprocess.call(['mpirun.mpich',\n",
+      "        subprocess.call(['time',\n",
+      "                         'mpirun.mpich',\n",
       "                         '-np',\n",
       "                         '8',\n",
       "                         './full.elf',\n",
@@ -195,7 +196,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -223,13 +224,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "878302.0\n",
-        "[ 6 11 15]\n",
-        "3454 2665 3.27315\n"
+        "2.86102e-06\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -242,7 +241,6 @@
       "i1 = 11\n",
       "i2 = 15\n",
       "z = cm.grid3D_to_zindex(np.array([i0, i1, i2]))\n",
-      "print Rdata[z]\n",
       "mlab.contour3d(Rdata_py[z, :, :, :, 0],\n",
       "               color = (0, 1, 0))\n",
       "# mlab.contour3d(Rdata_py_tmp[i0*8:i0*8 + 8,\n",
@@ -254,314 +252,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[[[[   0.           24.58171272]\n",
-        "   [   0.           26.31283379]\n",
-        "   [   0.           42.45132446]\n",
-        "   ..., \n",
-        "   [   0.          -59.65461731]\n",
-        "   [   0.          -51.34057617]\n",
-        "   [   0.           24.80719185]]\n",
-        "\n",
-        "  [[   0.          118.47253418]\n",
-        "   [   0.          104.60769653]\n",
-        "   [   0.           83.38052368]\n",
-        "   ..., \n",
-        "   [   0.          -66.3006134 ]\n",
-        "   [   0.          -92.24897003]\n",
-        "   [   0.          -46.93188477]]\n",
-        "\n",
-        "  [[   0.           40.36725616]\n",
-        "   [   0.           28.76358795]\n",
-        "   [   0.           -0.73839927]\n",
-        "   ..., \n",
-        "   [   0.           19.88636208]\n",
-        "   [   0.           -5.18183899]\n",
-        "   [   0.          -56.56637573]]\n",
-        "\n",
-        "  ..., \n",
-        "  [[   0.           35.50784302]\n",
-        "   [   0.           36.26183701]\n",
-        "   [   0.           48.94735718]\n",
-        "   ..., \n",
-        "   [   0.          -82.12466431]\n",
-        "   [   0.          -66.9599762 ]\n",
-        "   [   0.           22.99562454]]\n",
-        "\n",
-        "  [[   0.          127.0629425 ]\n",
-        "   [   0.          106.15714264]\n",
-        "   [   0.           75.95697784]\n",
-        "   ..., \n",
-        "   [   0.          -85.85246277]\n",
-        "   [   0.         -107.77903748]\n",
-        "   [   0.          -57.19266129]]\n",
-        "\n",
-        "  [[   0.           32.49834442]\n",
-        "   [   0.           17.81059074]\n",
-        "   [   0.          -13.66241074]\n",
-        "   ..., \n",
-        "   [   0.           28.71883965]\n",
-        "   [   0.           -2.43037081]\n",
-        "   [   0.          -66.20962524]]]\n",
-        "\n",
-        "\n",
-        " [[[   0.           33.39289856]\n",
-        "   [   0.           19.36050987]\n",
-        "   [   0.            1.14601457]\n",
-        "   ..., \n",
-        "   [   0.            9.8672924 ]\n",
-        "   [   0.            9.36362076]\n",
-        "   [   0.           -6.53348684]]\n",
-        "\n",
-        "  [[   0.          104.07558441]\n",
-        "   [   0.           75.85233307]\n",
-        "   [   0.           32.59716415]\n",
-        "   ..., \n",
-        "   [   0.           75.34049988]\n",
-        "   [   0.           36.05409241]\n",
-        "   [   0.          -35.90472031]]\n",
-        "\n",
-        "  [[   0.           22.97158813]\n",
-        "   [   0.           20.5584259 ]\n",
-        "   [   0.           13.90719795]\n",
-        "   ..., \n",
-        "   [   0.           31.35143661]\n",
-        "   [   0.            9.94978905]\n",
-        "   [   0.          -14.34267044]]\n",
-        "\n",
-        "  ..., \n",
-        "  [[   0.           43.30208969]\n",
-        "   [   0.           22.51314163]\n",
-        "   [   0.           -2.16929126]\n",
-        "   ..., \n",
-        "   [   0.           11.28441811]\n",
-        "   [   0.            3.11518478]\n",
-        "   [   0.          -23.50716209]]\n",
-        "\n",
-        "  [[   0.          113.76037598]\n",
-        "   [   0.           77.98092651]\n",
-        "   [   0.           31.35581207]\n",
-        "   ..., \n",
-        "   [   0.           71.91966248]\n",
-        "   [   0.           19.8861084 ]\n",
-        "   [   0.          -59.14218521]]\n",
-        "\n",
-        "  [[   0.           17.9590683 ]\n",
-        "   [   0.           18.24240875]\n",
-        "   [   0.           15.78661442]\n",
-        "   ..., \n",
-        "   [   0.           24.14566803]\n",
-        "   [   0.            2.6222415 ]\n",
-        "   [   0.          -15.20380211]]]\n",
-        "\n",
-        "\n",
-        " [[[   0.            2.78481817]\n",
-        "   [   0.           -6.91313887]\n",
-        "   [   0.          -47.91536713]\n",
-        "   ..., \n",
-        "   [   0.            5.22887325]\n",
-        "   [   0.           35.39091873]\n",
-        "   [   0.           -7.73729706]]\n",
-        "\n",
-        "  [[   0.           21.99324036]\n",
-        "   [   0.            0.97716296]\n",
-        "   [   0.          -45.86274338]\n",
-        "   ..., \n",
-        "   [   0.          117.46073151]\n",
-        "   [   0.          115.16555786]\n",
-        "   [   0.            5.1286993 ]]\n",
-        "\n",
-        "  [[   0.            5.91997719]\n",
-        "   [   0.            4.35902691]\n",
-        "   [   0.           19.91208649]\n",
-        "   ..., \n",
-        "   [   0.           59.00974655]\n",
-        "   [   0.           28.53264999]\n",
-        "   [   0.           10.95646763]]\n",
-        "\n",
-        "  ..., \n",
-        "  [[   0.            3.32030845]\n",
-        "   [   0.          -13.88019466]\n",
-        "   [   0.          -63.7134552 ]\n",
-        "   ..., \n",
-        "   [   0.           22.48652267]\n",
-        "   [   0.           45.09969711]\n",
-        "   [   0.          -21.03281403]]\n",
-        "\n",
-        "  [[   0.           28.83717537]\n",
-        "   [   0.            2.1687007 ]\n",
-        "   [   0.          -43.86198044]\n",
-        "   ..., \n",
-        "   [   0.          133.8298645 ]\n",
-        "   [   0.          111.58486938]\n",
-        "   [   0.          -15.66554451]]\n",
-        "\n",
-        "  [[   0.           10.23518276]\n",
-        "   [   0.           13.11581612]\n",
-        "   [   0.           37.62818146]\n",
-        "   ..., \n",
-        "   [   0.           46.09064484]\n",
-        "   [   0.           11.26328182]\n",
-        "   [   0.            7.37076664]]]\n",
-        "\n",
-        "\n",
-        " ..., \n",
-        " [[[   0.           61.9868927 ]\n",
-        "   [   0.          121.18669891]\n",
-        "   [   0.           96.61847687]\n",
-        "   ..., \n",
-        "   [   0.          -47.20063019]\n",
-        "   [   0.           20.49645805]\n",
-        "   [   0.           67.1878891 ]]\n",
-        "\n",
-        "  [[   0.            3.54717112]\n",
-        "   [   0.           49.42416382]\n",
-        "   [   0.           77.13587952]\n",
-        "   ..., \n",
-        "   [   0.          -20.81971359]\n",
-        "   [   0.           10.90188408]\n",
-        "   [   0.           72.2633667 ]]\n",
-        "\n",
-        "  [[   0.          -73.32415771]\n",
-        "   [   0.         -103.74585724]\n",
-        "   [   0.          -57.55950165]\n",
-        "   ..., \n",
-        "   [   0.           31.45530701]\n",
-        "   [   0.          -19.70777321]\n",
-        "   [   0.          -29.70036697]]\n",
-        "\n",
-        "  ..., \n",
-        "  [[   0.           85.62062073]\n",
-        "   [   0.          143.08630371]\n",
-        "   [   0.          107.10717773]\n",
-        "   ..., \n",
-        "   [   0.          -49.72938538]\n",
-        "   [   0.           26.01823807]\n",
-        "   [   0.           74.80787659]]\n",
-        "\n",
-        "  [[   0.            4.56164646]\n",
-        "   [   0.           48.00250244]\n",
-        "   [   0.           75.5448761 ]\n",
-        "   ..., \n",
-        "   [   0.          -23.58660507]\n",
-        "   [   0.            7.7696104 ]\n",
-        "   [   0.           67.94190979]]\n",
-        "\n",
-        "  [[   0.          -95.49987793]\n",
-        "   [   0.         -126.07209015]\n",
-        "   [   0.          -68.34675598]\n",
-        "   ..., \n",
-        "   [   0.           29.9269104 ]\n",
-        "   [   0.          -31.66527557]\n",
-        "   [   0.          -45.78657532]]]\n",
-        "\n",
-        "\n",
-        " [[[   0.           75.315979  ]\n",
-        "   [   0.          116.45986938]\n",
-        "   [   0.           75.20632935]\n",
-        "   ..., \n",
-        "   [   0.           13.16847515]\n",
-        "   [   0.           18.65154839]\n",
-        "   [   0.          -32.67571259]]\n",
-        "\n",
-        "  [[   0.           61.24845886]\n",
-        "   [   0.           37.96776199]\n",
-        "   [   0.           27.26668358]\n",
-        "   ..., \n",
-        "   [   0.          101.77668762]\n",
-        "   [   0.           15.69913292]\n",
-        "   [   0.          -95.38665771]]\n",
-        "\n",
-        "  [[   0.          -53.21702576]\n",
-        "   [   0.         -105.11076355]\n",
-        "   [   0.          -64.07369232]\n",
-        "   ..., \n",
-        "   [   0.           42.15657043]\n",
-        "   [   0.          -13.15202808]\n",
-        "   [   0.          -24.52260208]]\n",
-        "\n",
-        "  ..., \n",
-        "  [[   0.          105.10295105]\n",
-        "   [   0.          133.95352173]\n",
-        "   [   0.           78.91818237]\n",
-        "   ..., \n",
-        "   [   0.           21.97676468]\n",
-        "   [   0.           10.18136787]\n",
-        "   [   0.          -59.84238052]]\n",
-        "\n",
-        "  [[   0.           58.17581177]\n",
-        "   [   0.           25.22729492]\n",
-        "   [   0.           21.02256775]\n",
-        "   ..., \n",
-        "   [   0.           93.62376404]\n",
-        "   [   0.          -15.06234074]\n",
-        "   [   0.         -132.15327454]]\n",
-        "\n",
-        "  [[   0.          -83.65846252]\n",
-        "   [   0.         -128.80047607]\n",
-        "   [   0.          -70.04626465]\n",
-        "   ..., \n",
-        "   [   0.           26.62134933]\n",
-        "   [   0.          -25.02323151]\n",
-        "   [   0.          -21.78133392]]]\n",
-        "\n",
-        "\n",
-        " [[[   0.           31.62161636]\n",
-        "   [   0.           51.2844696 ]\n",
-        "   [   0.           17.98545074]\n",
-        "   ..., \n",
-        "   [   0.          -18.01549911]\n",
-        "   [   0.          -50.86431885]\n",
-        "   [   0.         -107.28214264]]\n",
-        "\n",
-        "  [[   0.           44.82400513]\n",
-        "   [   0.          -17.76483917]\n",
-        "   [   0.          -37.49452209]\n",
-        "   ..., \n",
-        "   [   0.           74.18458557]\n",
-        "   [   0.          -94.58679199]\n",
-        "   [   0.         -277.47515869]]\n",
-        "\n",
-        "  [[   0.          -15.00405979]\n",
-        "   [   0.          -68.94639587]\n",
-        "   [   0.          -42.56905746]\n",
-        "   ..., \n",
-        "   [   0.           57.79984283]\n",
-        "   [   0.           -8.06947994]\n",
-        "   [   0.          -58.49007034]]\n",
-        "\n",
-        "  ..., \n",
-        "  [[   0.           49.57683563]\n",
-        "   [   0.           55.12677002]\n",
-        "   [   0.           12.47738171]\n",
-        "   ..., \n",
-        "   [   0.          -13.7496624 ]\n",
-        "   [   0.          -72.23955536]\n",
-        "   [   0.         -147.03137207]]\n",
-        "\n",
-        "  [[   0.           37.41809845]\n",
-        "   [   0.          -35.54705811]\n",
-        "   [   0.          -45.5766983 ]\n",
-        "   ..., \n",
-        "   [   0.           58.10897827]\n",
-        "   [   0.         -139.78726196]\n",
-        "   [   0.         -325.6968689 ]]\n",
-        "\n",
-        "  [[   0.          -34.85346985]\n",
-        "   [   0.          -80.76019287]\n",
-        "   [   0.          -39.8163147 ]\n",
-        "   ..., \n",
-        "   [   0.           42.50704193]\n",
-        "   [   0.          -14.70935154]\n",
-        "   [   0.          -49.53159332]]]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 13
+     "outputs": [],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
