--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:93eaae8c6afd4494839eeb5b1eeedbecfe17ce095d41272f79440b94408d9a5d"
+  "signature": "sha256:988eac61f01ee46c13233a9d9ffe8c40f55d3670fcf4ad10388bb38ed3098c64"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -191,12 +191,13 @@
       "        print ('compilation error')\n",
       "        return None\n",
       "\n",
+      "Rdata = get_cpp_data(branch = 'develop')\n",
       "Rdata = get_cpp_data(branch = 'feature-inplace_fft')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
