save comparison results

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:988eac61f01ee46c13233a9d9ffe8c40f55d3670fcf4ad10388bb38ed3098c64"
+  "signature": "sha256:b355a6e35ba3175293cb122cdf61d9cade93bd5ce8f2cb593b7d159fb9548a25"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -191,13 +191,14 @@
       "        print ('compilation error')\n",
       "        return None\n",
       "\n",
-      "Rdata = get_cpp_data(branch = 'develop')\n",
+      "#Rdata = get_cpp_data(branch = 'develop')\n",
+      "# develop says 30 secs, inplace fft is 28 secs\n",
       "Rdata = get_cpp_data(branch = 'feature-inplace_fft')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
