don't change git branch by default

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b355a6e35ba3175293cb122cdf61d9cade93bd5ce8f2cb593b7d159fb9548a25"
+  "signature": "sha256:aed492730f0495b9d00b7ba907dfed5ad60d60c630d5b2be9985069ccf8932ed"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -165,8 +165,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def get_cpp_data(branch = 'develop'):\n",
-      "    subprocess.call(['git', 'checkout', branch])\n",
+      "def get_cpp_data(branch = None):\n",
+      "    if not (type(branch) == type(None)):\n",
+      "        subprocess.call(['git', 'checkout', branch])\n",
       "    subprocess.call(['rm', 'Rdata_z0000000', 'Rdata_z0000800'])\n",
       "    if subprocess.call(['make', 'full.elf']) == 0:\n",
       "        subprocess.call(['time',\n",
@@ -193,7 +194,8 @@
       "\n",
       "#Rdata = get_cpp_data(branch = 'develop')\n",
       "# develop says 30 secs, inplace fft is 28 secs\n",
-      "Rdata = get_cpp_data(branch = 'feature-inplace_fft')"
+      "#Rdata = get_cpp_data(branch = 'feature-inplace_fft')\n",
+      "Rdata = get_cpp_data()"
      ],
      "language": "python",
      "metadata": {},
